--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,17 @@
         <header>
             <div class="navbar">
                 <div class="logo">
-                    <img src="assets/images/logo2.png" class="logo_img">
+                    <img src="assets/images/logo3.png" class="logo_img">
                 </div>
+                <div class="container__article-text">
+                        История Юга унесеная ветром
+                    </div>
                 <div class="navbar_navs">
                     <ul class="list">
-                        <a href="./index.html" class="list-link"><li class="list-item">Home</li></a>
-                        <a href="./charlestone.html" class="list-link"><li class="list-item">Charleston</li></a>
-                        <a href="./Savannah.html" class="list-link"><li class="list-item">Savannah</li></a>
-                        <a href="#" class="list-link"><li class="list-item">Contact</li></a>
+                        <a href="./index.html" class="list-link"><li class="list-item">Главная</li></a>
+                        <a href="./charlestone.html" class="list-link"><li class="list-item">Чарльстон</li></a>
+                        <a href="./Savannah.html" class="list-link"><li class="list-item">Саванна</li></a>
+                        <a href="#" class="list-link"><li class="list-item">Контакты</li></a>
                     </ul>
                 </div>
             </div>
@@ -48,14 +51,14 @@
                             class="contact-input"
                             type="text"
                             name="name"  
-                            placeholder="YOUR NAME*"
+                            placeholder="Имя*"
                             required
                             >
-                            <input class="contact-input" type="email" name="email"  placeholder="YOUR E-MAIL*" required>
-                            <input class="contact-input" type="text" name="subject"  placeholder="SUBJECT*" >
+                            <input class="contact-input" type="email" name="email"  placeholder="Ваш електронный адрес*" required>
+                            <input class="contact-input" type="text" name="subject"  placeholder="Тема*" >
                         </div>
                         <div class="contact-textarea-wrp">
-                     <textarea name ="body" cols="30" rows="10" placeholder="YOUR MASSAGE *"></textarea>
+                     <textarea name ="body" cols="30" rows="10" placeholder="Ваше сообщение *"></textarea>
                     </div>
                 </div>
                     </form>
