--- a/index.html
+++ b/index.html
@@ -22,23 +22,26 @@
         <header>
             <div class="navbar">
                 <div class="logo">
-                    <img src="assets/images/logo2.png" class="logo_img">
+                    <img src="assets/images/logo3.png" class="logo_img">
+                </div>
+                <div class="phrase">
+                        <div class="container__article-text">
+                                История Юга унесеная ветром
+                            </div>
                 </div>
                 <div class="navbar_navs">
                     <ul class="list">
-                        <a href="#" class="list-link"><li class="list-item">Home</li></a>
-                        <a href="./charlestone.html" class="list-link"><li class="list-item">Charleston</li></a>
-                        <a href="./Savannah.html" class="list-link"><li class="list-item">Savannah</li></a>
-                        <a href="./contact.html" class="list-link"><li class="list-item">Contact</li></a>
+                        <a href="#" class="list-link"><li class="list-item">Главная</li></a>
+                        <a href="./charlestone.html" class="list-link"><li class="list-item">Чарльстон</li></a>
+                        <a href="./Savannah.html" class="list-link"><li class="list-item">Саванна</li></a>
+                        <a href="./contact.html" class="list-link"><li class="list-item">Контакты</li></a>
                     </ul>
                 </div>
             </div>
         </header>
     <div class="container">
 
-        <div class="container__article-text">
-            История Юга <br>   унесеная ветром
-        </div>
+        
         <div class="split left">
             <div class="innerDiv">
           <!-- <h1 class="title">Charleston</h1> -->
