--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
           <h3>Свяжитесь с нами</h3>
           <p class="upinput_text">Задайте вопросы и оставьте пожелания</p>
         </div>
-        <form action="#" id="contact-form" method="POST">
+        <form action="./contactFrom.php" id="contact-form" method="POST">
           <div class="contact-form-wrp">
             <div class="contact-inputs">
               <input
